--- a/pages/index.html
+++ b/pages/index.html
@@ -24,10 +24,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="#">Projetos</a>
+                        <a href="https://github.com/Kakazin-sama?tab=repositories">Projetos</a>
                     </li>
                     </ul>    
                 </nav>
@@ -35,10 +32,27 @@
             </div>
         </div>
         <h1>Kauã B. Silva</h1>
-        <h2>Front-end developer</h2>
+        <h2>Front-end and Web developer</h2>
         <div class="social-media">
-            
+            <a href="https://www.instagram.com/og.houdini/">Instagram</a>
+            <a href="https://github.com/Kakazin-sama">GitHub</a>
         </div>
     </header>
+    <main class="container">
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Sobre Mim</h2>
+                    <p>Vem Ver!</p>
+                </div>
+            </div>
+            <div class="card-text">
+               Olá! Eu sou o Kauã e sou um desenvovedor de web aprendiz com focos iniciais em JavaScript, React.Js, Banco de dados, HTML e CSS e também trabalho com Hardware. 
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+ Feito por Kauã B.Silva   ;)
+    </footer>
 </body>
 </html>
