--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,39 @@
                Olá! Eu sou o Kauã e sou um desenvovedor de web aprendiz com focos iniciais em JavaScript, React.Js, Banco de dados, HTML e CSS e também trabalho com Hardware. 
             </div>
         </div>
+        <div class="cardi-container">
+            <div class="cardi">
+                <div class="cardi-wrapper">
+                    <h2>JavaScript</h2>
+                    <p>O que aprendi</p>
+                </div>
+            </div>
+            <div class="cardi-text">
+                JavaScript é uma linguagem de programação interpretada e estruturada, de script em alto nível com tipagem dinâmica e multiparadigma (protótipos, orientado a objeto, imperativo e funcional). Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web.
+            </div>
+        </div>
+        <div class="cody-container">
+            <div class="cody">
+                <div class="cody-wrapper">
+                    <h2>React.JS</h2>
+                    <p>O que aprendi</p>
+                </div>
+            </div>
+            <div class="cody-text">
+                O React é uma biblioteca baseada em front-end do JavaScript com códigos abertos com foco em criar interfaces de usuário em páginas web.
+            </div>
+        </div>
+        <div class="carin-container">
+            <div class="carin">
+                <div class="carin-wrapper">
+                    
+                    <p>O que aprendi</p>
+                </div>
+            </div>
+            <div class="carin-text">
+                MySQL é um sistema open-source de gerenciamento de base de dados relacional. Para sites WordPress, isso quer dizer que ele ajuda a armazenar todas suas publicações, usuários, informações de plugins, etc. Ele armazena essas informações em “tabelas” separadas e as conecta com “chaves”.
+            </div>
+        </div>
     </main>
     <footer class="footer">
  Feito por Kauã B.Silva   ;)
