--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="https://github.com/Kakazin-sama?tab=repositories">Projetos</a>
+                        <a href="https://github.com/devGojo?tab=repositories">Projetos</a>
                     </li>
                     </ul>    
                 </nav>
@@ -34,8 +34,8 @@
         <h1>Kauã B. Silva</h1>
         <h2>Front-end and Web developer</h2>
         <div class="social-media">
-            <a href="https://www.instagram.com/og.houdini/">Instagram</a>
-            <a href="https://github.com/Kakazin-sama">GitHub</a>
+            <a href="https://www.instagram.com/og.virgil/">Instagram</a>
+            <a href="https://github.com/devGojo">GitHub</a>
         </div>
     </header>
     <main class="container">
